--- a/LearnShoolGabdelkhakova/LearnShoolGabdelkhakova.csproj
+++ b/LearnShoolGabdelkhakova/LearnShoolGabdelkhakova.csproj
@@ -64,9 +64,26 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddService.xaml.cs">
+      <DependentUpon>AddService.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Admin.xaml.cs">
+      <DependentUpon>Admin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Service.xaml.cs">
       <DependentUpon>Service.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Zapis.xaml.cs">
+      <DependentUpon>Zapis.xaml</DependentUpon>
+    </Compile>
+    <Page Include="AddService.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Admin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -132,6 +149,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Service.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Zapis.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
